project/logs/20251003_103005.log
Use Adapater:NVIDIA GeForce RTX 3070 Laptop GPU

FeatrueLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3D.VS.hlsl,profile:vs_6_0

Compile Succeeded,path:Object3D.VS.hlsl,profile:vs_6_0

Begin CompileShader,path:Object3D.PS.hlsl,profile:ps_6_0

Object3D.PS.hlsl:43:43: error: no member named 'normal' in 'VertexShaderOutput'
        float NdotL = dot(normalize(input.normal), -gDirectionalLight.direction);
                                    ~~~~~ ^

